[package]
name = "ethercat"
version = "0.1.0"
edition = "2021"
description = """
A command line utility to control an Ethercat device
"""
categories = ["asynchronous", "network-programming", "science", "command-line-utilities"]
keywords = ["Ethercat", "Beckhoff", "ADS", "automation", "PLC"]

[dependencies]
ads_client = "1.4.1"
tokio = { version =  "1.19.2", features = ["rt", "rt-multi-thread", "net", "io-util", "macros"] }